tests/baselines/reference/importDeclRefereingExternalModuleWithNoResolve.errors.txt
==== tests/cases/compiler/importDeclRefereingExternalModuleWithNoResolve.ts (4 errors) ====
    import b = require("externalModule");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
                       ~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find external module 'externalModule'.
    declare module "m1" {
                   ~~~~
!!! error TS2435: Ambient external modules cannot be nested in other modules.
        import im2 = require("externalModule");
                             ~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find external module 'externalModule'.
    }
    